# mage_orchestrator_playground

./: pyproject.toml
mage/: metadata.yaml
mage_test/: metadata.yaml
mage_test/pipelines/elemental_paladin/: metadata.yaml
mage_test/pipelines/nimble_waterfall/: metadata.yaml
mage_test/pipelines/quixotic_inventor/: metadata.yaml
