[tool.poetry]
name = "mage"
version = "0.1.0"
description = ""
authors = ["Guimarret <guimarret@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mage-ai = "^0.9.71"
botocore = "^1.34.116"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
